<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    tools:context=".ui.AboutActivity">
        
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/about_me"
            style="@style/Widget.MaterialComponents.Toolbar.Primary">

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/about_pict"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/about_toolbar"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp"
            android:src="@drawable/about_pict"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_name_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/about_pict"
            android:layout_centerHorizontal="true"
            android:text="@string/name_received"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tv_name_received"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:id="@+id/relative_aboutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name_received"
            android:layout_margin="20dp">

                <TextView
                    style="@style/TextContentStatus"
                    android:id="@+id/tv_email_received"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:textSize="18sp"
                    android:text="@string/email_received"/>

                <TextView
                    style="@style/TextContentStatus"
                    android:id="@+id/tv_phone_number_received"
                    android:layout_below="@id/tv_email_received"
                    android:layout_marginTop="14dp"
                    android:drawableStart="@drawable/ic_baseline_call_24"
                    android:text="@string/no_hp_received"/>

                <TextView
                    style="@style/TextContentStatus"
                    android:id="@+id/tv_city_received"
                    android:layout_below="@id/tv_phone_number_received"
                    android:layout_marginTop="14dp"
                    android:drawableStart="@drawable/ic_baseline_location_city_24"
                    android:text="@string/city_received"/>

                <TextView
                    style="@style/TextContentStatus"
                    android:id="@+id/tv_school_received"
                    android:layout_below="@id/tv_city_received"
                    android:layout_marginTop="14dp"
                    android:drawableStart="@drawable/ic_baseline_school_24"
                    android:text="@string/school_received"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/relative_aboutStatus"
            android:background="@android:color/darker_gray"/>

        <TextView
            style="@style/TextContent"
            android:id="@+id/content_about"
            android:layout_margin="16dp"
            android:layout_below="@id/relative_aboutStatus"
            android:text="@string/about_me_content"/>


     </RelativeLayout>

</ScrollView>